# keysark

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.panes/: dev.yaml
apps/cli/: package.json
apps/cli/scripts/: build.mjs
apps/cli/src/: cli.ts  config.test.ts  config.ts  credential.ts  folders.ts  fsperm.ts  git.ts  keystore.ts  save-target.ts  session.ts  transport.ts  ui.ts  vault-select.ts
apps/desktop/: README.md  package.json
apps/desktop/dist-placeholder/: index.html
apps/desktop/scripts/: bundle-sidecar.mjs
apps/desktop/sidecar/: launch.mjs  paths.mjs
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/sidecar/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: eslint.config.mjs  next.config.ts  package.json
apps/web/public/: site.webmanifest
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: brand.tsx  cli-access-dialog.tsx  docs.tsx  landing.tsx  platform-marks.tsx  service-provider.tsx  vault-panel.tsx
apps/web/src/lib/: build-info.ts  file-preview.ts  google.ts  i18n.ts  providers.ts  rate-limit.test.ts  (+9 more)
logos/keysark-logo/: README.md  head-snippet.html
proposals/20260607175426-tauri-desktop-and-cli.done/: feedback.md  proposal.md
proposals/20260607175426-tauri-desktop-and-cli.done/plans/: 001-shared-vault-package.done.md  002-tauri-desktop-sidecar.done.md  003-keysark-cli.done.md
scripts/: publish.sh
(+11 files in other folders)
