[package]
name = "keysark-desktop"
version = "0.0.0"
description = "KeysArk desktop (Tauri shell + Node sidecar)"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "keysark_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
